# rs-webhook-cli

./: Cargo.toml  README.md
inventory/: example.json.sample  ha.json
src/: error.rs  main.rs  utils.rs
